feat(executor): integrate TerrakubeClient in SetupWorkspaceImpl and PlanStructuredOutputService
- Added TerrakubeClient as a dependency to streamline context management and remote content handling.
- Updated related methods to use organization and job IDs for API interactions.
- Adjusted tests to account for new client dependency.
- Bumped TerrakubeClient version to 1.6.0 in `pom.xml`.